Added share buttons

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,18 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta property="og:title" content="Kinshivik">
+    <meta property="og:description" content="Read this article on Kinshivik"> 
+    <meta property="og:image" content="https://yourwebsite.com/path-to-your-image.jpg"> 
+    <meta property="og:url" content="https://yourwebsite.com">
+    <meta property="og:type" content="website">
+
+
+
+
+
+
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
